// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./Countdown.stories Days 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex gap-2"
    >
      <div>
        <span
          class="font-bold"
        >
          2
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          days
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./Countdown.stories DaysHoursMinutes 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex gap-2"
    >
      <div>
        <span
          class="font-bold"
        >
          2
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          days
        </span>
      </div>
      <div>
        <span
          class="font-bold"
        >
          2
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          hrs
        </span>
      </div>
      <div>
        <span
          class="font-bold"
        >
          15
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          mins
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./Countdown.stories Hours 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex gap-2"
    >
      <div>
        <span
          class="font-bold"
        >
          2
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          hrs
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./Countdown.stories HoursAndMinutes 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex gap-2"
    >
      <div>
        <span
          class="font-bold"
        >
          2
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          hrs
        </span>
      </div>
      <div>
        <span
          class="font-bold"
        >
          5
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          mins
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./Countdown.stories LessThanOneMinute 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <span
      class="font-bold"
    >
      &lt; 1 min
    </span>
  </div>
</div>
`;

exports[`./Countdown.stories Minutes 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex gap-2"
    >
      <div>
        <span
          class="font-bold"
        >
          5
        </span>
         
        <span
          class="text-[var(--color-primary-light)]"
        >
          mins
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./Countdown.stories Zero 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  />
</div>
`;
